codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__agents_overview_markdown.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 923
expression: "cached.replace(&format!(\"{project}  1\"),\n&format!(\"/tmp/project  1{padding}\")).replace(&project,\n&format!(\"/tmp/project{padding}\"))"
---
"  Agent command center                                                                          "
"  0 need input   0 working   1 ready                                                            "
"  ────────────────────────────────────────────────────────────────────────────────────────────  "
"  /tmp/project  1                                     │ Task details                            "
"  › ○ Review parser  Ready                            │                                         "
"                                                      │ Review parser                           "
"                                                      │ ○ Ready                                 "
"                                                      │                                         "
"                                                      │ Last message                            "
"                                                      │ ## Findings                             "
"                                                      │                                         "
"                                                      │ - Fixed parsing and tokens with a long  "
"                                                      │   explanation that wraps.               "
"                                                      │                                         "
"                                                      │ - Kept compatibility.                   "
"                                                      │                                         "
"                                                      │ let token = 1;                          "
"                                                      │                                         "
"                                                      │ Project                                 "
"                                                      │ /tmp/project                            "
"                                                      │ Model: Unknown                          "
"                                                      │                                         "
"                                                      │ Prompt                                  "
"                                                      │ Review parser and token handling.       "
"                                                      │                                         "
"                                                      │                                         "
"                                                      │                                         "
"                                                      │                                         "
"                                                      │                                         "
"                                                      │                                         "
"                                                      │                                         "
"                                                      │                                         "
"                                                      │                                         "
"                                                      │                                         "
"  New task                                                                                      "
"────────────────────────────────────────────────────────────────────────────────────────────────"
"› Describe a new task                                                                           "
"────────────────────────────────────────────────────────────────────────────────────────────────"
"  ↑↓ navigate o resume enter open n new task w new worktree f search g group: project r rename  "
"  x stop h hide a archive del delete ctrl+c quit                                                "
