codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__agents_overview_markdown_long_lines.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: "render_bottom_popup(&app.chat_widget,\n96).replace(&format!(\"{project}  1\"),\n&normalized_group).replace(&project, \"/tmp/project\")"
---
  Agent command center
  0 need input   0 working   1 ready
  ────────────────────────────────────────────────────────────────────────────────────────────
  /tmp/project  1                                     │ Task details
  › ○ Review parser  Ready                            │
                                                      │ Review parser
                                                      │ ○ Ready
                                                      │
                                                      │ Last message
                                                      │ let explanation = "A long code line
                                                      │ should wrap inside the task details
                                                      │ panel.";
                                                      │
                                                      │ Project
                                                      │ /tmp/project
                                                      │ Model: Unknown
                                                      │
                                                      │
  New task

› Describe a new task

  ↑↓ navigate o resume enter open n new task f search g group: project r rename x stop h hide
  a archive del delete ctrl+c quit
