codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__agents_overview_model_grouping.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 1209
expression: "render_bottom_popup(&app.chat_widget,\n100).replace(&test_path_display(\"/tmp/project\"),\n\"/tmp/project\").replace(\"fwd del\", \"del\")"
---
  Agent command center
  0 need input   0 working   4 ready
  ────────────────────────────────────────────────────────────────────────────────────────────────
  Unknown  1                                              │ Task details
  › ○ Legacy task  Ready                                  │
                                                          │ Legacy task
  model-a  2                                              │ ○ Ready
    ○ Recent task  Ready                                  │
    ○ Older task  Ready                                   │ Project
                                                          │ /tmp/project
  model-b  1                                              │ Model: Unknown
    ○ Other model  Ready                                  │
                                                          │ Prompt
                                                          │ Legacy task
                                                          │
                                                          │
                                                          │
                                                          │
  New task
────────────────────────────────────────────────────────────────────────────────────────────────────
› Describe a new task
────────────────────────────────────────────────────────────────────────────────────────────────────
  ↑↓ navigate o resume enter open n new task w new worktree f search g group: model r rename
  x stop h hide a archive del delete ctrl+c quit
