codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__agents_overview_mouse_selection.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 1504
expression: selected_rows
---
    ○ First task  Ready
  › ○ Second task  Ready
