codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__dashboard_composer_bottom_after_resize.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: "snapshot.join(\"\\n\")"
---
80x24: composer 4 rows from bottom
120x48: composer 4 rows from bottom
80x36: composer 4 rows from bottom
