codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__older_server_narrow_overview.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 169
expression: "render_bottom_popup(&app.chat_widget, 12)"
---
  Service
  v0.152.1
  < Codex
  CLI
  v0.153.0
  0 need i
  ────────






  New task
────────────
› Describe
────────────
  n new
  task
  w new
  worktree
  f search
  ctrl+c
  quit
