codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__overview_right_open_hint.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 295
expression: "rendered.lines().find(|line| line.contains(\"open\")).unwrap()"
---
  ↑↓ navigate o resume enter open n new w new worktree f search g group: project r rename
