codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__overview_thread_colors_match_footer_and_respect_color_suppression.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: "snapshot.join(\"\\n\")"
---
  › ○ Named task  Ready                                   │ | title style: Style::new().white().on_blue().underline_color(Color::Reset)
                                                          │ Named task | title style: Style::new().fg(Color::Rgb(242, 205, 205)).bg(Color::Reset).underline_color(Color::Reset).bold()
  › ○ Named task  Ready                                   │ | title style: Style::new().white().on_blue().underline_color(Color::Reset)
                                                          │ Named task | title style: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
