codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__overview_worktree_creation_busy_state.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 22
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
  Agent command center
  Creating worktree…
  ────────────────────────────────────────────────────────────────────────────
















  New task
────────────────────────────────────────────────────────────────────────────────
› Describe a new task
────────────────────────────────────────────────────────────────────────────────
  Creating worktree…  ctrl+c quit
